<resources>
    <string name="app_name">WheelOfDespair</string>
    <string name="Input">Input</string>
    <string name="UserPassword">Password</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="test">Test</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="UserName">Username</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="item">Item</string>
    <string name="save">Save</string>
    <string name="input_editor">Input Editor</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="close">Close</string>
</resources>