<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical">

<TextView
    android:id="@+id/labelTextView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="25sp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="15dp"
    android:textStyle="bold"
    android:textColor="@color/white"
    android:text="@string/do_you_want_to_exit"
    android:gravity="center"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        style="?android:attr/buttonBarButtonStyle" />
</LinearLayout>

</LinearLayout>